// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Create Button with {"text": "Hello World", "variant": "error"} 1`] = `
.emotion-0 {
  padding: 0.7em 1em;
  background-color: #00739d;
  color: #f3f3f3;
  outline: none;
  border: none;
  border-radius: 3.125em;
}

.emotion-0:disabled {
  opacity: 0.35;
}

.emotion-0:hover:not(:disabled) {
  background-color: #015b7c;
}

<button
  class="emotion-0"
  text="Hello World"
  type="submit"
  variant="error"
>
  <span />
</button>
`;

exports[`Button Create Button with {"text": "Hello World", "variant": "success"} 1`] = `
.emotion-0 {
  padding: 0.7em 1em;
  background-color: #00739d;
  color: #f3f3f3;
  outline: none;
  border: none;
  border-radius: 3.125em;
}

.emotion-0:disabled {
  opacity: 0.35;
}

.emotion-0:hover:not(:disabled) {
  background-color: #015b7c;
}

<button
  class="emotion-0"
  text="Hello World"
  type="submit"
  variant="success"
>
  <span />
</button>
`;
